package com.projetoconfeitaria.project.enuns;

public enum CategoriaItem {
    BOLO,
    DOCE,
    SALGADO,
    BEBIDA,
    EMBALAGEM,
    OUTRO
}
