package com.projetoconfeitaria.project.enuns;

public enum Role {
    ADMIN,
    FUNCIONARIO
}
